force-app/main/default/objects/Session_Feedback__c/Session_Feedback__c.object-meta.xml
<CustomObject>
    <label>Session Feedback</label>
    <pluralLabel>Session Feedbacks</pluralLabel>
    <nameField>
        <label>Session Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>