force-app/main/default/objects/Session_Feedback__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <label>Session Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>